// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a function 1`] = `
Object {
  "resources": Array [
    Object {
      "attrs": Object {},
      "id": "main/my_function",
      "inbound": Array [],
      "outbound": Array [],
      "props": Object {
        "environmentVariables": Object {
          "ENV_VAR1": "true",
          "WING_SIM_INFLIGHT_RESOURCE_PATH": "main/my_function",
          "WING_SIM_INFLIGHT_RESOURCE_TYPE": "wingsdk.cloud.Function",
        },
        "sourceCodeFile": "assets/my_function/index.js",
        "sourceCodeLanguage": "javascript",
      },
      "type": "wingsdk.cloud.Function",
    },
  ],
  "sdkVersion": "0.0.0",
}
`;

exports[`invoke function fails 1`] = `
Object {
  "resources": Array [
    Object {
      "attrs": Object {},
      "id": "main/my_function",
      "inbound": Array [],
      "outbound": Array [],
      "props": Object {
        "environmentVariables": Object {
          "WING_SIM_INFLIGHT_RESOURCE_PATH": "main/my_function",
          "WING_SIM_INFLIGHT_RESOURCE_TYPE": "wingsdk.cloud.Function",
        },
        "sourceCodeFile": "assets/my_function/index.js",
        "sourceCodeLanguage": "javascript",
      },
      "type": "wingsdk.cloud.Function",
    },
  ],
  "sdkVersion": "0.0.0",
}
`;

exports[`invoke function succeeds 1`] = `
Object {
  "resources": Array [
    Object {
      "attrs": Object {},
      "id": "main/my_function",
      "inbound": Array [],
      "outbound": Array [],
      "props": Object {
        "environmentVariables": Object {
          "WING_SIM_INFLIGHT_RESOURCE_PATH": "main/my_function",
          "WING_SIM_INFLIGHT_RESOURCE_TYPE": "wingsdk.cloud.Function",
        },
        "sourceCodeFile": "assets/my_function/index.js",
        "sourceCodeLanguage": "javascript",
      },
      "type": "wingsdk.cloud.Function",
    },
  ],
  "sdkVersion": "0.0.0",
}
`;

exports[`invoke function with environment variables 1`] = `
Object {
  "resources": Array [
    Object {
      "attrs": Object {},
      "id": "main/my_function",
      "inbound": Array [],
      "outbound": Array [],
      "props": Object {
        "environmentVariables": Object {
          "PIG_LATIN": "true",
          "WING_SIM_INFLIGHT_RESOURCE_PATH": "main/my_function",
          "WING_SIM_INFLIGHT_RESOURCE_TYPE": "wingsdk.cloud.Function",
        },
        "sourceCodeFile": "assets/my_function/index.js",
        "sourceCodeLanguage": "javascript",
      },
      "type": "wingsdk.cloud.Function",
    },
  ],
  "sdkVersion": "0.0.0",
}
`;
